fix: improve the readability Change the color of secondary text to make it easier to read.

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -17,17 +17,17 @@ $global-background-color-black: #000000 !default;
 // Color of the text
 $global-font-color: #161209 !default;
 $global-font-color-dark: #a9a9b3 !default;
-$global-font-color-black: rgb(217, 217, 217) !default;
+$global-font-color-black: #d9d9d9 !default;
 
 // Color of the secondary text
-$global-font-secondary-color: #a9a9b3 !default;
-$global-font-secondary-color-dark: #5d5d5f !default;
-$global-font-secondary-color-black: #5d5d5f !default;
+$global-font-secondary-color: #4d4d4d !default;
+$global-font-secondary-color-dark: #b5b5b5 !default;
+$global-font-secondary-color-black: #a9a9b3 !default;
 
 // Color of the link
 $global-link-color: #161209 !default;
 $global-link-color-dark: #a9a9b3 !default;
-$global-link-color-black: #a9a9b3 !default;
+$global-link-color-black: #d9d9d9 !default;
 
 // Color of the hover link
 $global-link-hover-color: #2d96bd !default;
